fix: Remove env reference from vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
+```json
 {
     "version": 2,
     "buildCommand": "npm run build",
@@ -19,8 +20,6 @@
         "api/**/*.ts": {
             "runtime": "nodejs20.x"
         }
-    },
-    "env": {
-        "DATABASE_URL": "@database_url"
     }
 }
+```
