--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,17 @@
     "version": 2,
     "buildCommand": "npm run build",
     "outputDirectory": "dist/public",
-    "rewrites": [
+    "routes": [
         {
-            "source": "/api/(.*)",
-            "destination": "/api/$1"
+            "src": "/api/(.*)",
+            "dest": "/api/$1"
         },
         {
-            "source": "/(.*)",
-            "destination": "/index.html"
+            "handle": "filesystem"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
