Add Vercel serverless functions for backend API
- Created 6 serverless API endpoints (strategies, deposits, solana stats/feed, rebalance, seed)
- Updated vercel.json with function configuration and rewrites
- Added @vercel/node dependency for serverless function types
- Updated tsconfig to include api directory
- Added DEPLOYMENT.md with setup instructions

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,26 @@
     "version": 2,
     "buildCommand": "npm run build",
     "outputDirectory": "dist/public",
+    "functions": {
+        "api/**/*.ts": {
+            "memory": 1024,
+            "maxDuration": 10
+        }
+    },
+    "rewrites": [
+        {
+            "source": "/api/strategies/:id",
+            "destination": "/api/strategies"
+        },
+        {
+            "source": "/api/deposits/:walletAddress",
+            "destination": "/api/deposits"
+        },
+        {
+            "source": "/api/deposits/:id",
+            "destination": "/api/deposits"
+        }
+    ],
     "routes": [
         {
             "handle": "filesystem"
