Fix vercel.json: remove routes to use only rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -20,15 +20,10 @@
         {
             "source": "/api/deposits/:id",
             "destination": "/api/deposits"
-        }
-    ],
-    "routes": [
-        {
-            "handle": "filesystem"
         },
         {
-            "src": "/(.*)",
-            "dest": "/index.html"
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
